--- a/challenge-amigo-secreto_pt-main/style.css
+++ b/challenge-amigo-secreto_pt-main/style.css
@@ -136,7 +136,7 @@ ul {
 
 .result-list {
     margin-top: 15px;
-    color: #05DF05;
+    color: darkblue;
     font-size: 22px;
     font-weight: bold;
     text-align: center;
